# BL_Alexandria

./: .env.example  .gitignore  AGENTS.md  Catalogo.md  Guia.md  Guia_IDE.md  INDICE_IA.detalle.json  INDICE_IA.json  PLAN_EXTRACCION_READMES.md  README.md  proyecto.md  pyproject.toml  requirements.txt  tmp_debug_curation.py
ai_index/: ROUTER.json  WINNERS.json
config/: ignore_patterns.yaml  install_allowlist.yaml  paths.yaml  project_types.yaml  repo_policy.yaml  scoring_rules.yaml
data/: INDICE_IA.detalle.json.bak  INDICE_IA.json.bak  REPOS.detail.json.bak  REPOS.scan.json.bak
data/drafts/: activepieces.json  ag2.json  agency-agents.json  agent-toolkit.json  agentmemory.json  agents-towards-production.json  andrej-karpathy-skills.json  antigravity-awesome-skills.json  appsmith.json  archivebox.json  autogen.json  autoresearch.json  awesome-agent-skills.json  awesome-bigdata.json  awesome-claude-code.json  awesome-dataviz.json  awesome-langgraph.json  awesome-mcp-clients.json  awesome-mcp-servers.json  browser-harness.json  browser-use.json  budibase.json  chatwoot.json  claude-plugins-official.json  codebase-memory-mcp.json  codegraph.json  comfyui-ipadapter-plus.json  comfyui.json  context-engineering.json  controlnet.json  cosmos.json  crawlee.json  (+153 more)
human/: README.md  catalogo.md  descartar.md  diferir.md  usar-ahora.md
menu_portable/: REPO_MENU.md  REPO_MENU_DATA.json
registry/: external_tools.yaml  repos.example.yaml
scripts/: extract_all_readmes.py  recurate_all.py  verify_extraction.py
tests/: test_discover.py  test_recommend.py  test_render_guide.py
(+309 files in other folders)
