[project]
name = "repo-intelligence-hub"
version = "0.1.0"
description = "Local repository intelligence system for the BL_Alexandria AI library."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crawl4ai>=0.7.0",
    "duckdb>=1.3.0",
    "gitpython>=3.1.44",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "markitdown[all]>=0.1.3",
    "networkx>=3.4.2",
    "orjson>=3.10.18",
    "pandas>=2.2.3",
    "pydantic>=2.11.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "rapidfuzz>=3.13.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.40",
    "typer>=0.15.4",
    "unidiff>=0.7.5",
]

[project.scripts]
repo-intelligence = "repo_intelligence.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_intelligence"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
